--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-boost": "^0.4.9",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "graphql": "^15.8.0",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
